==> amprnet-sweden/amprnet.se-Radio/w5500.c <==
#include "w5500.h"
#include <string.h>
#include <ti/drivers/SPI.h>
#include <ti/drivers/GPIO.h>
#include "ti_drivers_config.h"
#define MSGSIZE 1524
#define wizchip_cs_select() GPIO_write(SPICS, 0)
#define wizchip_cs_deselect() GPIO_write(SPICS, 1)

uint8_t wizchip_read(uint8_t block, uint16_t address)
{
    uint8_t ret;


    block |= AccessModeRead;

    transmitBuffer[0] = ((address & 0xff00) >> 8);
    transmitBuffer[1] = ((address & 0x00ff) >> 0);
    transmitBuffer[2] = block;
    spiTransaction.txBuf = (void *)transmitBuffer;
    spiTransaction.rxBuf = (void *)receiveBuffer;
    spiTransaction.count = 4;
    wizchip_cs_select();
    transferOK = SPI_transfer(spi, &spiTransaction);
    wizchip_cs_deselect();
    if (!transferOK) {
       // Error in SPI or transfer already in progress.
       while (1);
    }
    ret = receiveBuffer[3];
//    wizchip_cs_deselect();
    return ret;
}

void wizchip_read_buf(uint8_t block, uint16_t address, uint8_t* pBuf, uint16_t len)
{


    block |= AccessModeRead;

    transmitBuffer[0] = ((address & 0xff00) >> 8);
    transmitBuffer[1] = ((address & 0x00ff) >> 0);
    transmitBuffer[2] = block;
    spiTransaction.txBuf = (void *)transmitBuffer;
    spiTransaction.rxBuf = (void *)receiveBuffer;
    spiTransaction.count = 3;       // just read the response to command
    wizchip_cs_select();
      transferOK = SPI_transfer(spi, &spiTransaction);
      if (!transferOK) {
         // Error in SPI or transfer already in progress.
         while (1);
      }
      spiTransaction.rxBuf = (void *)pBuf;
      spiTransaction.count = len;       // just read the response to command
      transferOK = SPI_transfer(spi, &spiTransaction);
      if (!transferOK) {
         // Error in SPI or transfer already in progress.
         while (1);
      }
    wizchip_cs_deselect();

/*    spiTransaction.count = len+3;
    wizchip_cs_select();
      transferOK = SPI_transfer(spi, &spiTransaction);
    wizchip_cs_deselect();
    if (!transferOK) {
       // Error in SPI or transfer already in progress.
       while (1);
    } */
/*    xprint("Len ");
    xprint_int(len);
    xprint("\n"); */
//    memcpy(&pBuf,&receiveBuffer[3],len);
/*    for (int i = 0; i< len;i++) {
       pBuf[i] = receiveBuffer[i+3];
    } */
/*    wizchip_cs_deselect();
    return ret;
    wizchip_spi_write_byte((address & 0xFF00) >> 8);
    wizchip_spi_write_byte((address & 0x00FF) >> 0);
    wizchip_spi_write_byte(block);
    for(i = 0; i < len; i++)
        pBuf[i] = wizchip_spi_read_byte();

    wizchip_cs_deselect(); */
}

void wizchip_write(uint8_t block, uint16_t address, uint8_t wb)
{

    block |= AccessModeWrite;

    transmitBuffer[0] = ((address & 0xff00) >> 8);
    transmitBuffer[1] = ((address & 0x00ff) >> 0);
    transmitBuffer[2] = block;
    transmitBuffer[3] = wb;
    spiTransaction.txBuf = (void *)transmitBuffer;
    spiTransaction.rxBuf = (void *)receiveBuffer;
    spiTransaction.count = 4;
    wizchip_cs_select();
    transferOK = SPI_transfer(spi, &spiTransaction);
    wizchip_cs_deselect();
    if (!transferOK) {
       // Error in SPI or transfer already in progress.
       while (1);
    }
/*    wizchip_spi_write_byte((address & 0xFF00) >> 8);
    wizchip_spi_write_byte((address & 0x00FF) >> 0);
    wizchip_spi_write_byte(block);
    wizchip_spi_write_byte(wb); */
}

void wizchip_write_buf(uint8_t block, uint16_t address, const uint8_t* pBuf, uint16_t len)
{


    block |= AccessModeWrite;

    transmitBuffer[0] = ((address & 0xff00) >> 8);
    transmitBuffer[1] = ((address & 0x00ff) >> 0);
    transmitBuffer[2] = block;
/*    for(int i = 0;i<len; i++) {
        transmitBuffer[i+3] = pBuf[i];
    } */
    spiTransaction.txBuf = (void *)transmitBuffer;
    spiTransaction.rxBuf = (void *)receiveBuffer;
    spiTransaction.count = 3;
    wizchip_cs_select();
    transferOK = SPI_transfer(spi, &spiTransaction);
    if (!transferOK) {
       // Error in SPI or transfer already in progress.
       while (1);
    }
    spiTransaction.txBuf = (void *)pBuf;
    spiTransaction.count = len;
    transferOK = SPI_transfer(spi, &spiTransaction);
    wizchip_cs_deselect();
    if (!transferOK) {
       // Error in SPI or transfer already in progress.
       while (1);
    }
/*    wizchip_spi_write_byte((address & 0xFF00) >> 8);
    wizchip_spi_write_byte((address & 0x00FF) >> 0);
    wizchip_spi_write_byte(block);
    for(i = 0; i < len; i++)
        wizchip_spi_write_byte(pBuf[i]);

    wizchip_cs_deselect(); */
}

 uint16_t getSn_TX_FSR() {
    uint16_t val=0,val1=0;
    do
    {
        val1 = wizchip_read_word(BlockSelectSReg, Sn_TX_FSR);
        if (val1 != 0)
        {
            val = wizchip_read_word(BlockSelectSReg, Sn_TX_FSR);
        }
    } while (val != val1);
    return val;
}

uint16_t getSn_RX_RSR()
{
    uint16_t val=0,val1=0;
    do
    {
        val1 = wizchip_read_word(BlockSelectSReg, Sn_RX_RSR);
        if (val1 != 0) //if updated / updating
        {
            val = wizchip_read_word(BlockSelectSReg, Sn_RX_RSR);
        }
    } while (val != val1); // until two readings same and not zero
    return val;
}
